# pluto

./: .dockerignore  .gitignore  1-validators.json  10-validators.json  100-validators.json  1000-validators.json  5-validators.json  500-validators.json  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DKG_PRIORITY_PLAN.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  deny.toml  deps.txt  flake.nix  plan.md  rust-toolchain.toml  rustfmt.toml
crates/charon/: Cargo.toml  build.rs
crates/charon-cli/: Cargo.toml
crates/charon-cli/src/: ascii.rs  cli.rs  duration.rs  error.rs  main.rs
crates/charon-cli/src/commands/: create_enr.rs  enr.rs  mod.rs  version.rs
crates/charon-cli/src/commands/test/: all.rs  beacon.rs  config.rs  infra.rs  mev.rs  mod.rs  output.rs  peers.rs  scoring.rs  types.rs  validator.rs
crates/charon-cluster/: Cargo.toml  build.rs
crates/charon-cluster/src/: definition.rs  deposit.rs  distvalidator.rs  eip712sigs.rs  helpers.rs  lib.rs  lock.rs  operator.rs  registration.rs  ssz.rs  ssz_hasher.rs  version.rs
crates/charon-cluster/src/examples/: cluster-definition-005.json
crates/charon-cluster/src/manifest/: mod.rs
crates/charon-cluster/src/manifestpb/: mod.rs
crates/charon-core/: Cargo.toml  build.rs
crates/charon-core/src/: lib.rs  qbft.rs  retry.rs  types.rs  version.rs
crates/charon-core/src/consensus/: protocols.rs
crates/charon-core/src/corepb/v1-proto/: consensus.rs  core.rs  parsigex.rs  priority.rs
crates/charon-core/src/deadline/: mod.rs
crates/charon-core/src/qbft/: fake_clock.rs  internal_test.rs  mod.rs
crates/charon-eth2/: Cargo.toml
crates/charon-eth2/src/: eip712.rs  enr.rs  helpers.rs  lib.rs  rlp.rs
crates/charon-eth2/src/deposit/: amounts.rs  constants.rs  domain.rs  errors.rs  files.rs  mod.rs  types.rs
crates/charon-p2p/: Cargo.toml
crates/charon-p2p/examples/: metrics.rs  p2p.rs
crates/charon-p2p/src/: config.rs  gater.rs  lib.rs  metrics.rs  name.rs  p2p.rs  peer.rs
crates/charon-p2p/src/behaviours/: pluto.rs  pluto_mdns.rs
crates/charon/benches/: k1util.rs
crates/charon/src/: featureset.rs  lib.rs  retry.rs
crates/charon/src/deadline/: mod.rs
crates/charon/src/eth1wrap/: mod.rs
crates/charon/src/eth2wrap/: eth2api.rs  eth2client.rs  mod.rs  valcache.rs  version.rs
crates/charon/src/expbackoff/: mod.rs
crates/charon/src/featureset/: mod.rs
crates/charon/src/log/loki/: mod.rs
crates/charon/src/log/loki/lokipb/v1/: loki.rs
crates/charon/src/obolapi/: client.rs  error.rs  exit.rs  helper.rs  mod.rs  publish.rs  test_api.rs
crates/charon/src/peerinfo/: mod.rs
crates/charon/src/retry/: mod.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: ascii.rs  cli.rs  duration.rs  error.rs  main.rs
crates/cli/src/commands/: address_validation.rs  common.rs  constants.rs  create_cluster.rs  create_dkg.rs  create_enr.rs  dkg.rs  enr.rs  mod.rs  relay.rs  version.rs
crates/cli/src/commands/test/: beacon.rs  constants.rs  helpers.rs  infra.rs  mev.rs  mod.rs  peers.rs  speedtest.rs  validator.rs
crates/core/: Cargo.toml
crates/core/examples/: parasigex.rs
crates/core/src/: deadline.rs  lib.rs  parsigex_codec.rs  signeddata.rs  ssz_codec.rs  testutils.rs  types.rs  version.rs
crates/core/src/consensus/: protocols.rs
crates/core/src/corepb/: v1.rs
crates/core/src/corepb/v1/: consensus.rs  core.rs  parsigex.rs  priority.rs
crates/core/src/parasigdb/: memory.rs  memory_internal_test.rs  metrics.rs
crates/core/src/parsigdb/: memory.rs  memory_internal_test.rs
crates/core/src/parsigex/: behaviour.rs  handler.rs  mod.rs  protocol.rs  signed_data.rs
crates/core/src/qbft/: fake_clock.rs  internal_test.rs  mod.rs
crates/core/testdata/: signed_data_golden.json
crates/core/testdata/signeddata/: TestJSONSerialisation_AttestationData.json.golden  TestJSONSerialisation_BeaconCommitteeSelection.json.golden  TestJSONSerialisation_Signature.json.golden  TestJSONSerialisation_SignedRandao.json.golden  TestJSONSerialisation_SignedSyncContributionAndProof.json.golden  TestJSONSerialisation_SignedSyncMessage.json.golden  TestJSONSerialisation_SignedVoluntaryExit.json.golden  TestJSONSerialisation_SyncCommitteeSelection.json.golden  TestJSONSerialisation_SyncContribution.json.golden  TestJSONSerialisation_SyncContributionAndProof.json.golden  TestJSONSerialisation_VersionedAggregatedAttestation.json.golden  TestJSONSerialisation_VersionedAttestation.json.golden  TestJSONSerialisation_VersionedSignedAggregateAndProof.json.golden  TestJSONSerialisation_VersionedSignedProposal.json#01.golden
crates/core/testdata/ssz/: attestation_phase0.ssz.hex  signed_aggregate_and_proof.ssz.hex  versioned_agg_proof_phase0.ssz.hex  versioned_attestation_phase0.ssz.hex  versioned_attestation_phase0_with_validator_index.ssz.hex  versioned_proposal_phase0.ssz.hex
crates/dkg/: Cargo.toml
crates/dkg/examples/: bcast.rs  sync.rs
crates/dkg/examples/interop/: README.md  charon_sync_demo.go  charon_sync_demo.sh
crates/dkg/src/: aggregate.rs  disk.rs  dkg.rs  exchanger.rs  frost.rs  frostp2p.rs  lib.rs  node.rs  nodesigs.rs  publish.rs  share.rs  signing.rs  validators.rs
crates/dkg/src/bcast/: behaviour.rs  component.rs  error.rs  handler.rs  mod.rs  protocol.rs
crates/dkg/src/dkgpb/: v1.rs
crates/dkg/src/dkgpb/v1/: bcast.proto  bcast.rs  dkg.dkgpb.v1.rs  frost.proto  frost.rs  nodesigs.proto  nodesigs.rs  sync.proto  sync.rs
crates/dkg/src/sync/: behaviour.rs  client.rs  error.rs  handler.rs  mod.rs  protocol.rs  server.rs
crates/frost/: Cargo.toml  README.md  dkg.md
crates/frost/src/: curve.rs  frost_core.rs  kryptology.rs  lib.rs  tests.rs
crates/frost/tests/: kryptology_interop.rs  kryptology_round_trip.rs
crates/peerinfo/: Cargo.toml
crates/peerinfo/examples/: README.md  peerinfo.rs
crates/peerinfo/src/: behaviour.rs  config.rs  failure.rs  handler.rs  lib.rs  metrics.rs  protocol.rs
crates/peerinfo/src/peerinfopb/v1/: peerinfo.rs
crates/pluto-cluster/: Cargo.toml
crates/pluto-cluster/src/: distvalidator.rs  eip712sigs.rs  lock.rs
(+240 files in other folders)
