[workspace]
members = [
    "crates/charon",
    "crates/charon-cli",
    "crates/charon-cluster",
    "crates/charon-consensus",
    "crates/charon-core",
    "crates/charon-crypto",
    "crates/charon-db",
    "crates/charon-dkg",
    "crates/charon-errors",
    "crates/charon-eth2",
    "crates/charon-observability",
    "crates/charon-p2p",
    "crates/charon-serde",
    "crates/charon-testutil",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/NethermindEth/charon-rs"
license = "Apache-2.0"                                    # TODO(template) update license
publish = false

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
hex = { version = "^0.4.3" }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
blsful = "2.5.7"
rand_core = "0.9.3"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"
