[workspace]
members = [
    "crates/charon",
    "crates/charon-cli",
    "crates/charon-cluster",
    "crates/charon-consensus",
    "crates/charon-core",
    "crates/charon-crypto",
    "crates/charon-db",
    "crates/charon-dkg",
    "crates/charon-errors",
    "crates/charon-eth2",
    "crates/charon-observability",
    "crates/charon-p2p",
    "crates/charon-serde",
    "crates/charon-testutil",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/NethermindEth/charon-rs"
license = "Apache-2.0"                                    # TODO(template) update license
publish = false

[workspace.dependencies]
axum = "0.8.6"
chrono = { version = "0.4", features = ["serde"] }
hex = { version = "^0.4.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
tokio = { version = "1", features = ["full"] }
blst = "0.3.13"
rand_core = "0.6"
thiserror = "2.0.12"
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
rand = {version = "0.8", features = ["std_rng"]}
uuid = {version = "1.16", features = ["serde", "v4"] }
serde_with = { version = "3", features = ["hex", "base64"] }
libp2p = { version = "0.56", features = ["full", "secp256k1"] }
base64 = { version = "0.22.1" }
sha3 = { version = "0.10.8" }
k256 = { version = "0.13.4", features = ["ecdsa", "sha256"] }
criterion = "0.7.0"

# Crates in the workspace
charon = { path = "crates/charon" }
charon-crypto = { path = "crates/charon-crypto" }
charon-eth2 = { path = "crates/charon-eth2" }
charon-p2p = { path = "crates/charon-p2p" }
charon-testutil = { path = "crates/charon-testutil" }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"
