[workspace]
members = [
    "crates/charon",
    "crates/charon-cli",
    "crates/charon-cluster",
    "crates/charon-consensus",
    "crates/charon-core",
    "crates/charon-crypto",
    "crates/charon-db",
    "crates/charon-dkg",
    "crates/charon-errors",
    "crates/charon-eth2",
    "crates/charon-observability",
    "crates/charon-p2p",
    "crates/charon-serde",
    "crates/charon-testutil",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/NethermindEth/charon-rs"
license = "Apache-2.0"                                    # TODO(template) update license
publish = false

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
blst = "0.3.13"
cancellation = "0.1.0"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8.4"
hex = { version = "^0.4.3" }
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
rand = { version = "0.8", features = ["std_rng"] }
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"
