[package]
name = "charon-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "pluto"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap.workspace = true

# Error Handling
thiserror.workspace = true

# Cryptography
k256.workspace = true

# Hex encoding for verbose output
hex.workspace = true

# Async Runtime
tokio.workspace = true

# Workspace Dependencies
charon-p2p.workspace = true
charon-eth2.workspace = true
charon-k1util.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
