[package]
name = "charon-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "pluto"
path = "src/main.rs"

[dependencies]
clap.workspace = true
thiserror.workspace = true
k256.workspace = true
hex.workspace = true
humantime.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["base64"] }
rand.workspace = true
tree_hash.workspace = true
charon-core.workspace = true
charon-p2p.workspace = true
charon-eth2.workspace = true
charon-k1util.workspace = true
charon.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
