[package]
name = "charon-cluster"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
serde_with.workspace = true
charon-crypto.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build.workspace = true

[lints]
workspace = true
