[package]
name = "charon-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
libp2p.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
charon-build-proto.workspace = true

[lints]
workspace = true