[package]
name = "charon-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
cancellation.workspace = true
chrono.workspace = true
crossbeam.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand.workspace = true

[lints]
workspace = true
