[package]
name = "charon-eth2"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
k256.workspace = true
thiserror.workspace = true
base64.workspace = true
sha3.workspace = true
hex.workspace = true
charon-testutil.workspace = true
charon-k1util.workspace = true
chrono.workspace = true

[lints]
workspace = true
