[package]
name = "charon-eth2"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
k256.workspace = true
thiserror.workspace = true
base64.workspace = true
sha3.workspace = true
hex.workspace = true
charon-testutil.workspace = true
charon-k1util.workspace = true
chrono.workspace = true
# Deposit module dependencies
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tree_hash = "0.12"
tree_hash_derive = "0.12"
charon-crypto.workspace = true
glob = "0.3"

[lints]
workspace = true
