[package]
name = "charon-eth2"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
k256.workspace = true
thiserror.workspace = true
base64.workspace = true
sha3.workspace = true
hex.workspace = true
charon-testutil.workspace = true
charon-k1util.workspace = true
chrono.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
charon-crypto.workspace = true
tokio.workspace = true
eth2api.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert-json-diff.workspace = true

[lints]
workspace = true
