[package]
name = "charon-p2p"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
libp2p.workspace = true
thiserror.workspace = true
k256.workspace = true
charon-eth2.workspace = true
charon-k1util.workspace = true
chrono.workspace = true
rand.workspace = true

[dev-dependencies]
charon-testutil.workspace = true
tempfile.workspace = true

[lints]
workspace = true
