[package]
name = "charon"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
backon.workspace = true
tokio.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
charon-build-proto.workspace = true

[dev-dependencies]


[lints]
workspace = true
