[package]
name = "charon"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
backon.workspace = true
chrono.workspace = true
charon-core.workspace = true
tokio.workspace = true
prost.workspace = true
prost-types.workspace = true
thiserror.workspace = true
alloy.workspace = true
url.workspace = true

[build-dependencies]
charon-build-proto.workspace = true

[dev-dependencies]

[lints]
workspace = true
