[package]
name = "pluto-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "pluto"
path = "src/main.rs"

[dependencies]
clap.workspace = true
thiserror.workspace = true
k256.workspace = true
hex.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
libp2p.workspace = true
pluto-core.workspace = true
pluto-p2p.workspace = true
pluto-eth2util.workspace = true
pluto-k1util.workspace = true
pluto-relay-server.workspace = true
pluto-tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
