[package]
name = "pluto-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cancellation.workspace = true
chrono.workspace = true
crossbeam.workspace = true
futures.workspace = true
hex.workspace = true
libp2p.workspace = true
pluto-eth2api.workspace = true
prost.workspace = true
prost-types.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
libp2p.workspace = true
prost.workspace = true
prost-types.workspace = true
hex.workspace = true
chrono.workspace = true
test-case.workspace = true

[build-dependencies]
pluto-build-proto.workspace = true
built.workspace = true

[lints]
workspace = true
