[package]
name = "pluto-dkg"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
pluto-cluster.workspace = true
pluto-eth1wrap.workspace = true
pluto-eth2util.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[build-dependencies]
pluto-build-proto.workspace = true

[lints]
workspace = true
