[package]
name = "pluto-dkg"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
thiserror.workspace = true
libp2p.workspace = true
futures.workspace = true
tokio.workspace = true
unsigned-varint.workspace = true
sha2.workspace = true
tracing.workspace = true
either.workspace = true
k256.workspace = true
pluto-k1util.workspace = true
pluto-p2p.workspace = true

[build-dependencies]
pluto-build-proto.workspace = true

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
pluto-cluster.workspace = true
pluto-core.workspace = true
pluto-testutil.workspace = true
pluto-tracing.workspace = true
serde_json.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
