[package]
name = "frost-bls12-381-g1"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords = ["cryptography", "crypto", "bls12-381", "threshold", "signature"]
description = "Kryptology-compatible FROST DKG and BLS threshold signing over BLS12-381 G1."

[dependencies]
blst = { version = "0.3", default-features = false }
rand_core.workspace = true
sha2 = { version = "0.10.2", default-features = false }

[dev-dependencies]
hex.workspace = true
lazy_static.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde_json.workspace = true

[lib]
# Disables non-criterion benchmark which is not used; prevents errors
# when using criterion-specific flags
bench = false
