[package]
name = "pluto-frost"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
blst.workspace = true
rand_core.workspace = true
sha2.workspace = true

[dev-dependencies]
hex.workspace = true
rand.workspace = true
serde_json.workspace = true
