[package]
name = "charon-peerinfo"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
thiserror.workspace = true
libp2p.workspace = true
futures.workspace = true
futures-timer.workspace = true
tracing.workspace = true
chrono.workspace = true
unsigned-varint.workspace = true
hex.workspace = true

[build-dependencies]
charon-build-proto.workspace = true

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
hex-literal.workspace = true

[lints]
workspace = true

[[example]]
name = "peerinfo"
