[package]
name = "pluto-cluster"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
serde_with.workspace = true
pluto-crypto.workspace = true
thiserror.workspace = true
rand_core.workspace = true
libp2p.workspace = true
charon-p2p.workspace = true
charon-eth2.workspace = true
charon-k1util.workspace = true
k256.workspace = true

[build-dependencies]
prost-build.workspace = true

[lints]
workspace = true
